corrigindo caminho das pastas

--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="../js/script.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js"></script>
     <title>Import´s_br</title>
 </head>
 <body>
     <nav class="navbar">
-        <img src="../img/logo.png" class="brand-logo" alt="">
+        <img src="img/logo.png" class="brand-logo" alt="">
         <ul class="nav-links">
             <li class="nav-items"><a href="#">Sobre nós</a></li>
            
         </ul>
         <div class="right-container">
-            <img src="../img/whats.png" class="logo-redes" alt="" onclick="AbreWhats()">
+            <img src="img/whats.png" class="logo-redes" alt="" onclick="AbreWhats()">
         </div>
         <div class="left-container">
-            <img src="../img/instagram.png" class="logo-redes" alt="" onclick="AbreInsta()">
+            <img src="img/instagram.png" class="logo-redes" alt="" onclick="AbreInsta()">
         </div>
     </nav>
 
     <div class="movies-list">
         <div class="card-container">
             <div class="card" value="1" onclick="AbrePag(1)">
-                <img src="../img/Camisa Barcelona Roxo.jpg" class="card-img">
+                <img src="img/Camisa Barcelona Roxo.jpg" class="card-img">
                 <div class="image-hover">
                     <p class="image-description">
                         R$65,00
@@ -34,7 +34,7 @@
                 </div>
             </div> 
             <div class="card" value="2" onclick="AbrePag(2)">
-                <img src="../img/Camisa Brasil azul II.jpg" class="card-img">
+                <img src="img/Camisa Brasil azul II.jpg" class="card-img">
                 <div class="image-hover">
                     <p class="image-description">
                         R$65,00
@@ -55,7 +55,7 @@
    <div class="movies-list">
         <div class="card-container">
             <div class="card" ovalue="4" onclick="AbrePag(4)">
-                <img src="../img/Camisa Corinthians.jpg" class="card-img" id="image" alt="">
+                <img src="img/Camisa Corinthians.jpg" class="card-img" id="image" alt="">
                 <div class="image-hover">
                     <p class="image-description">
                         R$65,00
@@ -63,7 +63,7 @@
                 </div>
             </div> 
             <div class="card" value="5" onclick="AbrePag(5)">
-                <img src="../img/Camisa Chelsea.jpg" class="card-img" id="image" alt="">
+                <img src="img/Camisa Chelsea.jpg" class="card-img" id="image" alt="">
                 <div class="image-hover">
                     <p class="image-description">
                         R$65,00
@@ -71,7 +71,7 @@
                 </div>
             </div> 
             <div class="card" value="6" onclick="AbrePag(6)">
-                <img src="../img/Camisa Brasil Branca.jpg" class="card-img" id="image" alt="">
+                <img src="img/Camisa Brasil Branca.jpg" class="card-img" id="image" alt="">
                 <div class="image-hover">
                     <p class="image-description">
                         R$65,00
@@ -84,7 +84,7 @@
    <div class="movies-list">
         <div class="card-container">
             <div class="card" value="7" onclick="AbrePag(7)">
-                <img src="../img/Camisa Brasil amarela.jpg" class="card-img" id="image" alt="">
+                <img src="img/Camisa Brasil amarela.jpg" class="card-img" id="image" alt="">
                 <div class="image-hover">
                     <p class="image-description">
                         R$65,00
@@ -92,7 +92,7 @@
                 </div>
             </div> 
             <div class="card" value="8" onclick="AbrePag(8)">
-                <img src="../img/Camisa Palmeiras Verde.jpg" class="card-img" id="image" alt="">
+                <img src="img/Camisa Palmeiras Verde.jpg" class="card-img" id="image" alt="">
                 <div class="image-hover">
                     <p class="image-description">
                         R$65,00
