corrigindo caminho img

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div> 
             <div class="card" value="3" onclick="AbrePag(3)">
-                <img src="../img/Camisa Brasil frente II.jpg" class="card-img">
+                <img src="img/Camisa Brasil frente II.jpg" class="card-img">
                 <div class="image-hover">
                     <p class="image-description">
                         R$65,00
